# spectrogram

./: .gitignore  Makefile  QUICKSTART.md  README.md  design.md  eslint.config.js  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  task.md  team playbook.md  tsconfig.base.json  tsconfig.json
web/apps/playground/: index.html  package.json  vite.config.ts  vitest.config.ts
web/apps/playground/src/: main.tsx  palette-demo.tsx  palette-utils.ts  playground-app.tsx  wasm-test.test.ts  wasm-test.tsx
web/apps/playground/src/__mocks__/: wasm.ts
web/apps/playground/test/: palette-utils.test.ts
web/crates/dsp_core/: Cargo.toml
web/crates/dsp_core/src/: lib.rs
