[package]
name = "spectro_dsp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustfft = "6"
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
# Disable wasm-opt in automated environments where the binary isn't present.
# What: Skip binaryen's optimization pass during release builds.
# Why: Ensures `wasm-pack build` succeeds in CI without network downloads.
# How: `wasm-opt = false` instructs wasm-pack to avoid invoking wasm-opt.
wasm-opt = false

